reference/7.6/Microsoft.PowerShell.Core/About/About.md
---
description: About topics cover a range of concepts about PowerShell.
Help Version: 7.6.0.0
Locale: en-US
ms.date: 01/18/2026
title: About topics
---
# About topics

## Description

About topics cover a range of concepts about PowerShell.

## About Topics

### [about_Alias_Provider](about_Alias_Provider.md)

Provides access to the PowerShell aliases and the values that they represent.

### [about_Aliases](about_Aliases.md)

Describes how to use alternate names for cmdlets and commands in PowerShell.

### [about_ANSI_Terminals](about_ANSI_Terminals.md)

Describes the support available for ANSI escape sequences in Windows
PowerShell.

### [about_Arithmetic_Operators](about_Arithmetic_Operators.md)

Describes the operators that perform arithmetic in PowerShell.

### [about_Arrays](about_Arrays.md)

Describes arrays, which are data structures designed to store collections of
items.

### [about_Assignment_Operators](about_Assignment_Operators.md)

Describes how to use operators to assign values to variables.

### [about_Automatic_Variables](about_Automatic_Variables.md)

Describes variables that store state information for PowerShell. These
variables are created and maintained by PowerShell.

### [about_Booleans](about_Booleans.md)

Describes how boolean expressions are evaluated.

### [about_Break](about_Break.md)

Describes the `break` statement, which provides a way to exit the current
control block.

### [about_Built-in_Functions](about_Built-in_Functions.md)

Describes the built-in functions in PowerShell.

### [about_Calculated_Properties](about_Calculated_Properties.md)

PowerShell provides the ability to dynamically add new properties and alter the
formatting of objects output to the pipeline.

### [about_Calling_Generic_Methods](about_Calling_Generic_Methods.md)

Generics let you tailor a method, class, structure, or interface to the precise
data type it acts upon.

### [about_Case-Sensitivity](about_Case-Sensitivity.md)

PowerShell is as case-insensitive as possible while preserving case.

### [about_Character_Encoding](about_Character_Encoding.md)

Describes how PowerShell uses character encoding for input and output of string
data.

### [about_CimSession](about_CimSession.md)

Describes a **CimSession** object and the difference between CIM sessions and
PowerShell sessions.

### [about_Classes](about_Classes.md)

Describes how you can use classes to create your own custom types.

### [about_Classes_Constructors](about_Classes_Constructors.md)

Describes how to define constructors for PowerShell classes.

### [about_Classes_Inheritance](about_Classes_Inheritance.md)

Describes how you can define classes that extend other types.

### [about_Classes_Methods](about_Classes_Methods.md)

Describes how to define methods for PowerShell classes.

### [about_Classes_Properties](about_Classes_Properties.md)

Describes how to define properties for PowerShell classes.

### [about_Command_Precedence](about_Command_Precedence.md)

Describes how PowerShell determines which command to run.

### [about_Command_Syntax](about_Command_Syntax.md)

Describes the syntax diagrams that are used in PowerShell.

### [about_Comments](about_Comments.md)

Describes how to use PowerShell comments and lists special use cases.

### [about_Comment_Based_Help](about_Comment_Based_Help.md)

Describes how to write comment-based help topics for functions and scripts.

### [about_CommonParameters](about_CommonParameters.md)

Describes the parameters that can be used with any cmdlet.

### [about_Comparison_Operators](about_Comparison_Operators.md)

The comparison operators in PowerShell can either compare two values or filter
elements of a collection against an input value.

### [about_Continue](about_Continue.md)

Describes how the `continue` statement immediately returns the program flow to
the top of a program loop, a `switch` statement, or a `trap` statement.

### [about_Core_Commands](about_Core_Commands.md)

Lists the cmdlets that are designed for use with PowerShell providers.

### [about_Data_Files](about_Data_Files.md)

PowerShell data files are used to store arbitrary data using PowerShell syntax.

### [about_Data_Sections](about_Data_Sections.md)

Explains Data sections, which isolate text strings and other read-only data
from script logic.

### [about_Debuggers](about_Debuggers.md)

Describes the PowerShell debugger.

### [about_Do](about_Do.md)

Runs a statement list one or more times, subject to a `while` or `until`
condition.

### [about_Enum](about_Enum.md)

The `enum` statement is used to declare an enumeration. An enumeration is a
distinct type that consists of a set of named labels called the enumerator
list.

### [about_Environment_Provider](about_Environment_Provider.md)

Provides access to the Windows environment variables.

### [about_Environment_Variables](about_Environment_Variables.md)

Describes how to access and manage environment variables in PowerShell.

### [about_Error_Handling](about_Error_Handling.md)

Describes the three categories of PowerShell errors — non-terminating,
statement-terminating, and script-terminating — and explains how error
action preferences, `try/catch/trap`, and error state variables control
error handling behavior.

### [about_Execution_Policies](about_Execution_Policies.md)

Describes the PowerShell execution policies and explains how to manage them.

### [about_Experimental_Features](about_Experimental_Features.md)

The PowerShell provides a mechanism for experimental features to coexist with
existing stable features in the PowerShell engine or in a PowerShell module.

### [about_FileSystem_Provider](about_FileSystem_Provider.md)

Provides access to files and directories.

### [about_For](about_For.md)

Describes a language command you can use to run statements based on a
conditional test.

### [about_Foreach](about_Foreach.md)

Describes a language command you can use to traverse all the items in a
collection of items.

### [about_Format.ps1xml](about_Format.ps1xml.md)

The `Format.ps1xml` files in PowerShell define the default display of objects
in the PowerShell console.

### [about_Function_Provider](about_Function_Provider.md)

Provides access to the functions defined in PowerShell.

### [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)

Describes how functions that specify the `CmdletBinding` attribute can use the
methods and properties that are available to compiled cmdlets.

### [about_Functions_Advanced_Parameters](about_Functions_Advanced_Parameters.md)

Explains how to add parameters to advanced functions.

### [about_Functions_Advanced](about_Functions_Advanced.md)

Introduces advanced functions that are a way to create cmdlets using scripts.

### [about_Functions_Argument_Completion](about_Functions_Argument_Completion.md)

Argument completion is a feature of PowerShell that provide hints, enables
discovery, and speeds up input entry of argument values.

### [about_Functions_CmdletBindingAttribute](about_Functions_CmdletBindingAttribute.md)

Describes the attribute that makes a function work like a compiled cmdlet.

### [about_Functions_OutputTypeAttribute](about_Functions_OutputTypeAttribute.md)

Describes an attribute that reports the type of object that the function
returns.

### [about_Functions](about_Functions.md)

Describes how to create and use functions in PowerShell.

### [about_Group_Policy_Settings](about_Group_Policy_Settings.md)

Describes the Group Policy settings for PowerShell

### [about_Hash_Tables](about_Hash_Tables.md)

Describes how to create, use, and sort hashtables in PowerShell.

### [about_Hidden](about_Hidden.md)

Describes the `hidden` keyword, which hides class members from default
`Get-Member` results.

### [about_History](about_History.md)

Describes how to get and run commands in the command history.

### [about_If](about_If.md)

Describes a language command you can use to run statement lists based on the
results of one or more conditional tests.

### [about_Intrinsic_Members](about_Intrinsic_Members.md)

Provides information about PowerShell's intrinsic members that are available to
all PowerShell objects.

### [about_Job_Details](about_Job_Details.md)

Provides details about background jobs on local and remote computers.

### [about_Jobs](about_Jobs.md)

Provides information about how PowerShell background jobs run a command or
expression in the background without interacting with the current session.

### [about_Join](about_Join.md)

Describes how the join operator (`-join`) combines multiple strings into a
single string.

### [about_Language_Keywords](about_Language_Keywords.md)

Describes the keywords in the PowerShell scripting language.

### [about_Language_Modes](about_Language_Modes.md)

Explains language modes and their effect on PowerShell sessions.

### [about_Line_Editing](about_Line_Editing.md)

Describes how to edit commands at the PowerShell command prompt.

### [about_Locations](about_Locations.md)

Describes how to access items from the working location in PowerShell.

### [about_Logging_Non-Windows](about_Logging_Non-Windows.md)

PowerShell logs internal operations from the engine, providers, and cmdlets.

### [about_Logging_Windows](about_Logging_Windows.md)

PowerShell logs internal operations from the engine, providers, and cmdlets to
the Windows event log.

### [about_Logical_Operators](about_Logical_Operators.md)

Describes the operators that connect statements in PowerShell.

### [about_Member-Access_Enumeration](about_Member-Access_Enumeration.md)

Describes the automatic enumeration of list collection items when using the
member-access operator.

### [about_Methods](about_Methods.md)

Describes how to use methods to perform actions on objects in PowerShell.

### [about_Module_Manifests](about_Module_Manifests.md)

Describes the settings and practices for writing module manifest files.

### [about_Modules](about_Modules.md)

Explains how to install, import, and use PowerShell modules.

### [about_Numeric_Literals](about_Numeric_Literals.md)

This article describes the syntax and usage of numeric values in PowerShell.

### [about_Object_Creation](about_Object_Creation.md)

Explains how to create objects in PowerShell.

### [about_Objects](about_Objects.md)

Provides essential information about objects in PowerShell.

### [about_Operator_Precedence](about_Operator_Precedence.md)

Lists the PowerShell operators in precedence order.

### [about_Operators](about_Operators.md)

Describes the operators that are supported by PowerShell.

### [about_Output_Streams](about_Output_Streams.md)

Explains the availability and purpose of output streams in PowerShell.

### [about_PackageManagement](about_PackageManagement.md)

PackageManagement is an aggregator for software package managers.

### [about_Parameter_Binding](about_Parameter_Binding.md)

Parameter binding is the process that PowerShell uses to determine which
parameter set is being used and to associate (bind) values to the parameters of
a command.

### [about_Parameter_Sets](about_Parameter_Sets.md)

Describes how to define and use parameter sets in advanced functions.

### [about_Parameters_Default_Values](about_Parameters_Default_Values.md)

Describes how to set custom default values for cmdlet parameters and advanced
functions.

### [about_Parameters](about_Parameters.md)

Describes how to work with command parameters in PowerShell.

### [about_Parsing](about_Parsing.md)

Describes how PowerShell parses commands.

### [about_Path_Syntax](about_Path_Syntax.md)

Describes the full and relative path formats in  PowerShell.

### [about_Pipeline_Chain_Operators](about_Pipeline_Chain_Operators.md)

Describes chaining pipelines with the `&&` and `||` operators in PowerShell.

### [about_Pipelines](about_Pipelines.md)

Combining commands into pipelines in the PowerShell

### [about_PowerShell_Config](about_PowerShell_Config.md)

Configuration files for PowerShell, replacing Registry configuration.

### [about_PowerShell_Editions](about_PowerShell_Editions.md)

Different editions of PowerShell run on different underlying runtimes.

### [about_Preference_Variables](about_Preference_Variables.md)

Variables that customize the behavior of PowerShell.

### [about_Profiles](about_Profiles.md)

Describes how to create and use a PowerShell profile.

### [about_Prompts](about_Prompts.md)

Describes the `prompt` function and demonstrates how to create a custom
`prompt` function.

### [about_Properties](about_Properties.md)

Describes how to use object properties in PowerShell.

### [about_Providers](about_Providers.md)

PowerShell providers provide access to data and components, presented in a
consistent format that resembles a file system drive.

### [about_PSConsoleHostReadLine](about_PSConsoleHostReadLine.md)

Explains how to create a customize how PowerShell reads input at the console
prompt.

### [about_PSCustomObject](about_PSCustomObject.md)

Explains the differences between the `[psobject]` and `[pscustomobject]` type
accelerators.

### [about_PSItem](about_PSItem.md)

The automatic variable that contains the current object in the pipeline object.

### [about_PSModulePath](about_PSModulePath.md)

This article the purpose and usage of the `$Env:PSModulePath` environment
variable.

### [about_PSSession_Details](about_PSSession_Details.md)

Provides detailed information about PowerShell sessions and the role they play
in remote commands.

### [about_PSSessions](about_PSSessions.md)

Describes PowerShell sessions (PSSessions) and explains how to establish a
persistent connection to a remote computer.

### [about_Pwsh](about_Pwsh.md)

Explains how to use the `pwsh` command-line interface. Displays the
command-line parameters and describes the syntax.

### [about_Quoting_Rules](about_Quoting_Rules.md)

Describes rules for using single and double quotation marks in PowerShell.

### [about_Redirection](about_Redirection.md)

Explains how to redirect output from PowerShell to text files.

### [about_Ref](about_Ref.md)

Describes how to create and use a reference type variable. You can use
reference type variables to permit a function to change the value of a variable
that is passed to it.

### [about_Registry_Provider](about_Registry_Provider.md)

Describes the features and functions of the Registry provider.

### [about_Regular_Expressions](about_Regular_Expressions.md)

Describes regular expressions in PowerShell.

### [about_Remote_Disconnected_Sessions](about_Remote_Disconnected_Sessions.md)

Explains how to disconnect and reconnect to a PowerShell Session (PSSession).

### [about_Remote_Jobs](about_Remote_Jobs.md)

Describes how to run jobs on remote computers.

### [about_Remote_Output](about_Remote_Output.md)

Describes how to interpret and format the output of remote commands.

### [about_Remote_Requirements](about_Remote_Requirements.md)

Describes the system requirements and configuration requirements for running
remote commands in PowerShell.

### [about_Remote_Troubleshooting](about_Remote_Troubleshooting.md)

Describes how to troubleshoot remote operations in PowerShell.

### [about_Remote_Variables](about_Remote_Variables.md)

Explains how to use local and remote variables in remote commands.

### [about_Remote](about_Remote.md)

Describes how to run remote commands in PowerShell.

### [about_Requires](about_Requires.md)

Prevents a script from running without the required elements.

### [about_Reserved_Words](about_Reserved_Words.md)

Lists the reserved words that cannot be used as identifiers because they have a
special meaning in PowerShell.

### [about_Return](about_Return.md)

Exits the current scope, which can be a function, script, or scriptblock.

### [about_Run_With_PowerShell](about_Run_With_PowerShell.md)

Explains how to use the "Run with PowerShell" feature to run a script from a
file system drive.

### [about_Scopes](about_Scopes.md)

Explains the concept of scope in PowerShell and shows how to set and change the
scope of elements.

### [about_Script_Blocks](about_Script_Blocks.md)

Defines what a scriptblock is and explains how to use scriptblocks in the
PowerShell programming language.

### [about_Script_Internationalization](about_Script_Internationalization.md)

Describes the script internationalization features that make it easy for
scripts to display messages and instructions to users in their user interface
(UI) language.

### [about_Scripts](about_Scripts.md)

Describes how to run and write scripts in PowerShell.

### [about_Session_Configuration_Files](about_Session_Configuration_Files.md)

Describes session configuration files, which are used in a session
configuration (also known as an "endpoint") to define the environment of
sessions that use the session configuration.

### [about_Session_Configurations](about_Session_Configurations.md)

Describes session configurations, which determine the users who can connect to
the computer remotely and the commands they can run.

### [about_Signing](about_Signing.md)

Explains how to sign scripts so that they comply with the PowerShell execution
policies.

### [about_Simplified_Syntax](about_Simplified_Syntax.md)

Describes easier, more natural-language ways of scripting filters for
collections of objects.

### [about_Special_Characters](about_Special_Characters.md)

Describes the special character sequences that control how PowerShell
interprets the next characters in the sequence.

### [about_Splatting](about_Splatting.md)

Describes how to use splatting to pass parameters to commands in PowerShell.

### [about_Split](about_Split.md)

Explains how to use the Split operator to split one or more strings into
substrings.

### [about_Switch](about_Switch.md)

Explains how to use a switch to handle multiple `if` statements.

### [about_Tab_Expansion](about_Tab_Expansion.md)

PowerShell provides completions on input to provide hints, enable discovery,
and speed up input entry by pressing the <kbd>Tab</kbd> key.

### [about_Telemetry](about_Telemetry.md)

Describes the telemetry collected in PowerShell and how to opt-out.

### [about_Thread_Jobs](about_Thread_Jobs.md)

Provides information about PowerShell thread-based jobs. A thread job is a type
of background job that runs a command or expression in a separate thread within
the current session process.

### [about_Throw](about_Throw.md)

Describes the `throw` keyword that generates a script-terminating error by
default.

### [about_Trap](about_Trap.md)

Describes a keyword that handles statement-terminating and script-terminating
errors.

### [about_Try_Catch_Finally](about_Try_Catch_Finally.md)

Describes how to use the `try`, `catch`, and `finally` blocks to handle
statement-terminating and script-terminating errors.

### [about_Type_Accelerators](about_Type_Accelerators.md)

Describes the Type accelerators available for .NET types.

### [about_Type_Conversion](about_Type_Conversion.md)

PowerShell has a flexible type system that makes it easier to use. However, you
must understand how it works to avoid unexpected results.

### [about_Type_Operators](about_Type_Operators.md)

Describes the operators that work with Microsoft .NET types.

### [about_Types.ps1xml](about_Types.ps1xml.md)

Explains how to use `Types.ps1xml` files to extend the types of objects that
are used in PowerShell.

### [about_Updatable_Help](about_Updatable_Help.md)

Describes the updatable help system in PowerShell.

### [about_Update_Notifications](about_Update_Notifications.md)

Notifies users on startup of PowerShell that a new version of PowerShell has
been released.

### [about_Using](about_Using.md)

Allows you to indicate which namespaces are used in the session.

### [about_Variable_Provider](about_Variable_Provider.md)

Variable

### [about_Variables](about_Variables.md)

Describes how variables store values that can be used in PowerShell.

### [about_While](about_While.md)

Describes a language statement that you can use to run a command block based on
the results of a conditional test.

### [about_Wildcards](about_Wildcards.md)

Describes how to use wildcard characters in PowerShell.

### [about_Windows_PowerShell_Compatibility](about_Windows_PowerShell_Compatibility.md)

Describes the Windows PowerShell Compatibility functionality for PowerShell 7.

